<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dfit.dfpos.TambahPenjualanActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ljudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Point Of Sales"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bimg_tanggal"
        style="@style/DefaultButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtanggaltrans"
        app:layout_constraintTop_toBottomOf="@+id/ljudul"
        app:srcCompat="@drawable/ic_date_range_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/ednotrans"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundededtext"
        android:ems="10"
        android:hint="@string/pos_transaction_no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/edtanggaltrans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ljudul" />

    <EditText
        android:id="@+id/edtanggaltrans"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/roundededtext"
        android:ems="10"
        android:hint="@string/report_date"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/bimg_tanggal"
        app:layout_constraintStart_toEndOf="@+id/ednotrans"
        app:layout_constraintTop_toBottomOf="@+id/ljudul" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:scaleType="center"
        app:backgroundTint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/bbayar"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorAccent"
        app:srcCompat="@drawable/ic_control_point_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvdata"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edkodebarang" />

    <EditText
        android:id="@+id/eddesk"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundededtext"
        android:ems="10"
        android:hint="@string/purchase_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edkodebarang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundededtext"
        android:ems="10"
        android:hint="@string/purchase_item_code"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/bimg_barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eddesk" />

    <ImageView
        android:id="@+id/bimg_barcode"
        style="@style/DefaultButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        app:layout_constraintEnd_toStartOf="@+id/bcalc"
        app:layout_constraintTop_toBottomOf="@+id/eddesk"
        app:srcCompat="@drawable/ic_reorder_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/bcalc"
        style="@style/DefaultButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eddesk"
        app:srcCompat="@drawable/ic_local_atm_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:text="Total"
        app:layout_constraintBottom_toTopOf="@+id/ltotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ltotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bbayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/pos_bayar"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
